--- a/backend/Vizzy.Api/appsettings.json
+++ b/backend/Vizzy.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "ValidIssuer": "https://pblciirmszmcndmaxcvo.supabase.co/auth/v1",
+    "ValidAudience": "authenticated",
+    "JwtSecret": ""
+  }
 }
