--- a/backend/vizzy-backend/package.json
+++ b/backend/vizzy-backend/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@supabase/supabase-js": "^2.49.1",
     "cookie-parser": "^1.4.7",
+    "ioredis": "^5.6.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "rxjs": "^7.8.1"
