--- a/frontend/vizzy/package.json
+++ b/frontend/vizzy/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "next": "15.2.0-canary.70",
+    "next-intl": "^4.0.2",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
