--- a/backend/vizzy-backend/tsconfig.json
+++ b/backend/vizzy-backend/tsconfig.json
@@ -9,7 +9,10 @@
     "target": "ES2023",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "incremental": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
