--- a/frontend/vizzy/package.json
+++ b/frontend/vizzy/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.49.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "next": "15.2.2",
     "next-intl": "^4.0.2",
