--- a/frontend/vizzy/package.json
+++ b/frontend/vizzy/package.json
@@ -27,6 +27,7 @@
     "next-intl": "^4.0.2",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-country-state-city": "^1.1.12",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^2.0.1",
