--- a/backend/vizzy-backend/package.json
+++ b/backend/vizzy-backend/package.json
@@ -35,6 +35,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "rxjs": "^7.8.1",
+    "sharp": "^0.33.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
