--- a/backend/vizzy-backend/package.json
+++ b/backend/vizzy-backend/package.json
@@ -50,6 +50,7 @@
     "@types/express": "^5.0.0",
     "@types/ioredis": "^4.28.10",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.10",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
