--- a/backend/vizzy-backend/package.json
+++ b/backend/vizzy-backend/package.json
@@ -31,11 +31,13 @@
     "express": "^5.0.1",
     "ioredis": "^5.6.0",
     "multer": "^1.4.5-lts.2",
+    "nest-winston": "^1.10.2",
     "nestjs-zod": "^4.3.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.5",
+    "winston": "^3.17.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
