--- a/backend/vizzy-backend/package.json
+++ b/backend/vizzy-backend/package.json
@@ -21,18 +21,20 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.11",
-    "@nestjs/config": "^4.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.11",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.12",
     "@supabase/supabase-js": "^2.49.1",
+    "@types/nodemailer": "^6.4.17",
     "cookie-parser": "^1.4.7",
     "express": "^5.0.1",
     "ioredis": "^5.6.0",
     "multer": "^1.4.5-lts.2",
     "nest-winston": "^1.10.2",
     "nestjs-zod": "^4.3.1",
+    "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "rxjs": "^7.8.1",
