--- a/backend/vizzy-backend/package.json
+++ b/backend/vizzy-backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.12",
+    "@nestjs/swagger": "^11.1.1",
     "@supabase/supabase-js": "^2.49.1",
     "@types/nodemailer": "^6.4.17",
     "cookie-parser": "^1.4.7",
