--- a/.github/workflows/backend-integration-tests.yml
+++ b/.github/workflows/backend-integration-tests.yml
@@ -1,49 +1,63 @@
 name: Backend Integration Tests
 
 on:
+  push:
+    branches: [ main ]
+    paths:
+      - 'backend/vizzy-backend/**'
   pull_request:
-    branches: [main, develop]
+    branches: [ main ]
+    paths:
+      - 'backend/vizzy-backend/**'
   workflow_dispatch:
 
 jobs:
-  integration:
+  test:
     runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        working-directory: backend/vizzy-backend
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v3
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 22.x
-
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.npm
-            **/node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
+          node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: backend/vizzy-backend/package-lock.json
+      
       - name: Install dependencies
-        working-directory: ./backend/vizzy-backend
         run: npm ci
-
-      - name: Set up Supabase CLI
-        uses: supabase/setup-cli@v1.5.0
-        with:
-          version: latest
-
-      - name: Start Supabase local dev instance
-        working-directory: ./backend/vizzy-backend
-        run: supabase start --reset
-
+      
+      - name: Install Supabase CLI
+        run: |
+          curl -fsSL https://github.com/supabase/cli/releases/download/v2.22.1/supabase_2.22.1_linux_amd64.deb -o supabase.deb
+          sudo dpkg -i supabase.deb
+          rm supabase.deb
+      
+      - name: Start Supabase
+        run: |
+          supabase start --no-browser
+        env:
+          SUPABASE_AUTH_EXTERNAL_APPLE_SECRET: "test-secret"
+          SUPABASE_AUTH_SMS_TWILIO_AUTH_TOKEN: "test-token"
+          S3_HOST: "test-host"
+          S3_REGION: "test-region"
+          S3_ACCESS_KEY: "test-access-key"
+          S3_SECRET_KEY: "test-secret-key"
+          OPENAI_API_KEY: "test-openai-key"
+      
+      - name: Wait for Supabase to be ready
+        run: |
+          echo "Waiting for Supabase to be ready..."
+          timeout 60s bash -c 'until curl -s http://localhost:54321/rest/v1/ > /dev/null; do sleep 1; done'
+      
       - name: Run integration tests
-        working-directory: ./backend/vizzy-backend
+        run: npm run test:integration
         env:
           SUPABASE_URL: http://localhost:54321
-          SUPABASE_ANON_KEY: your-local-anon-key
-        run: npm run test:integration
+          SUPABASE_ANON_KEY: aa
+          SUPABASE_SERVICE_ROLE_KEY: aa
