--- a/.github/workflows/backend-integration-tests.yml
+++ b/.github/workflows/backend-integration-tests.yml
@@ -49,8 +49,8 @@ jobs:
           # Link to your specific project
           supabase link --project-ref pblciirmszmcndmaxcvo
           
-          # Start Supabase
-          supabase start
+          # Start Supabase and capture the output
+          supabase start > supabase_output.txt 2>&1
         env:
           SUPABASE_AUTH_EXTERNAL_APPLE_SECRET: "test-secret"
           SUPABASE_AUTH_SMS_TWILIO_AUTH_TOKEN: "test-token"
@@ -59,18 +59,13 @@ jobs:
           S3_ACCESS_KEY: "test-access-key"
           S3_SECRET_KEY: "test-secret-key"
           OPENAI_API_KEY: "test-openai-key"
-      
-      - name: Wait for Supabase to be ready
-        run: |
-          echo "Waiting for Supabase to be ready..."
-          timeout 60s bash -c 'until curl -s http://localhost:54321/rest/v1/ > /dev/null; do sleep 1; done'
-      
+
       - name: Extract Supabase credentials
         id: supabase-credentials
         run: |
-          # Extract the anon key and service role key from the Supabase config
-          ANON_KEY=$(grep ANON_KEY .supabase/docker/kong/kong.yml | awk '{print $2}' | tr -d '"')
-          SERVICE_KEY=$(grep SERVICE_ROLE_KEY .supabase/docker/kong/kong.yml | awk '{print $2}' | tr -d '"')
+          # Extract keys from Supabase start output
+          ANON_KEY=$(supabase status | grep 'anon key' | awk '{print $NF}')
+          SERVICE_KEY=$(supabase status | grep 'service_role key' | awk '{print $NF}')
           echo "ANON_KEY=$ANON_KEY" >> $GITHUB_ENV
           echo "SERVICE_KEY=$SERVICE_KEY" >> $GITHUB_ENV
       
