--- a/.github/workflows/backend-integration-tests.yml
+++ b/.github/workflows/backend-integration-tests.yml
@@ -56,7 +56,7 @@ jobs:
           supabase start > supabase_output.txt 2>&1
           
           # Push the schema to the local database
-          supabase db reset --password "${{ secrets.SUPABASE_DB_PASSWORD }}"
+          supabase db reset
         env:
           SUPABASE_AUTH_EXTERNAL_APPLE_SECRET: "test-secret"
           SUPABASE_AUTH_SMS_TWILIO_AUTH_TOKEN: "test-token"
