--- a/.github/workflows/backend-integration-tests.yml
+++ b/.github/workflows/backend-integration-tests.yml
@@ -54,7 +54,7 @@ jobs:
           
           echo "Attempting migration repair..."
           # Repair migration history if needed (auto-answer yes)
-          y | supabase migration repair --status reverted --password ${{ secrets.SUPABASE_DB_PASSWORD }}
+          echo y | supabase migration repair --status reverted --password ${{ secrets.SUPABASE_DB_PASSWORD }} || true
           
           echo "Pulling database schema..."
           # Pull the current database schema
