--- a/.github/workflows/danger-js-pr-review.yml
+++ b/.github/workflows/danger-js-pr-review.yml
@@ -2,6 +2,11 @@ name: Danger JS PR Review
 
 on: [pull_request]
 
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+
 jobs:
   danger:
     runs-on: ubuntu-latest
