--- a/.github/workflows/danger-js-pr-review.yml
+++ b/.github/workflows/danger-js-pr-review.yml
@@ -6,6 +6,12 @@ permissions:
   contents: read
   pull-requests: write
   issues: write
+  statuses: write
+  checks: write
+  discussions: write
+  security-events: write
+  actions: read
+  metadata: read
 
 jobs:
   danger:
