--- a/backend/vizzy-backend/package.json
+++ b/backend/vizzy-backend/package.json
@@ -93,6 +93,9 @@
     "testEnvironment": "node",
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/$1"
-    }
+    },
+    "setupFiles": [
+      "../test/setup.ts"
+    ]
   }
 }
